# dibs

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  SPEC.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  deploy.sh  docker-compose.yml  entrypoint.sh  gen-dev-tls.sh  host.env.example
deploy/tls/: device.crt  device.key
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  auth.tsx  index.css  main.tsx  theme.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: EnableControl.tsx  ui.tsx
frontend/src/components/detail/: Interlocks.tsx  Issues.tsx  Reservations.tsx  Roster.tsx
frontend/src/lib/: time.ts  useAsync.ts
frontend/src/pages/: Audit.tsx  EquipmentDetail.tsx  EquipmentList.tsx  IssueDetail.tsx  Issues.tsx  Login.tsx  Notifications.tsx  People.tsx  Settings.tsx
frontend/src/test/: EnableControl.test.tsx  pages.test.tsx  time.test.ts  ui.test.tsx  utils.tsx
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_node_gating_class_reassign.py  0003_drop_notification.py
scripts/: check_security_coverage.py  lint-shell.sh  run-tests.sh  test-deploy.sh  verify-deploy-linux.sh
src/dibs/: __init__.py  app.py  cache.py  config.py  context.py  db.py  enums.py  errors.py  logging.py  metrics.py  schema.py  timeutil.py
src/dibs/api/: __init__.py  admin.py  catalog.py  config.py  grants.py  health.py  issues.py  me.py  nodes.py  people.py  reservations.py  router.py  sessions.py
src/dibs/auth/: __init__.py  dependencies.py  identity.py  oidc.py  routes.py  session.py
src/dibs/device/: __init__.py  app.py  auth.py  keys.py  rate_limit.py  routes.py
src/dibs/models/: __init__.py  base.py  tables.py
src/dibs/permissions/: __init__.py  access.py  delegation.py  deps.py  tiers.py
src/dibs/services/: __init__.py  audit.py  catalog.py  directory.py  grants.py  idempotency.py  issues.py  nodes.py  notifications.py  principals.py  quota_engine.py  quotas.py  reservations.py  sessions.py  settings.py  status.py
src/dibs/workers/: __init__.py  mqtt.py  scheduler.py  tasks.py  worker.py
tests/: conftest.py  factories.py  test_admin.py  test_auth.py  test_catalog.py  test_config.py  test_device.py  test_grants.py  test_health.py  test_issues.py  test_nodes.py  test_oidc.py  test_permissions_access.py  test_permissions_unit.py  test_quota_engine.py  test_reservations.py  test_sessions.py  test_spa.py  test_timeutil.py  test_workers.py
