[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dibs"
version = "0.0.0"
description = "QUARTERMASTER equipment service: reservations, hardware interlocks, issue reports."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary,pool]>=3.2",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "authlib>=1.3",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "coverage>=7.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "freezegun>=1.5",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dibs"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["error::DeprecationWarning:dibs.*"]

[tool.coverage.run]
branch = true
source = ["dibs"]
# schema.py runs as a subprocess before the suite (run-tests.sh) and at deploy,
# so it is exercised end to end rather than measured in the pytest process.
omit = ["src/dibs/schema.py"]
# SQLAlchemy async hops into a greenlet; without this, coverage loses the
# continuation after every `await session.*` call.
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    # Bare `...` stub bodies only. A looser `\.\.\.` also matches lines that
    # merely contain an ellipsis (e.g. `tuple[str, ...]` in a def signature),
    # which would silently exclude that whole block from the coverage gate.
    "^\\s*\\.\\.\\.\\s*$",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
ignore_missing_imports = true
